<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    style="@style/ElectricityEdit">
	
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	    <TextView
	        android:id="@+id/edit_electricity_id"
	        style="@style/ElectricityEditHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@+string/edit_electricity_text" />

	</LinearLayout>
	    
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/electricitydoe" />

		<DatePicker
		    android:id="@+id/electricitydoedp" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/elec04_text" />

		<EditText
		    android:id="@+id/elec04"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="number" />
		
	</LinearLayout>
		
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/elec05_text" />

		<EditText
		    android:id="@+id/elec05"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="number" />
		
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/elec06_text" />

		<EditText
		    android:id="@+id/elec06"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="number" />
		
	</LinearLayout>
			
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>