<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/GasEdit" >
	
    <LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	    <TextView
	        android:id="@+id/edit_gas_id"
	        style="@style/GasEditHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@+string/edit_gas_text" />

	</LinearLayout>	    
    
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/gasdoe" />

		<!-- 
		<EditText
		    android:id="@+id/doe" 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="date" />  -->

		<DatePicker
		    android:id="@+id/gasdoedp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/gas" />

		<EditText
		    android:id="@+id/gas"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:inputType="number" />
		
	</LinearLayout>
	
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>